UIP-2926 Prop to set the color of link icons

--- a/packages/ui-library/src/css/text.scss
+++ b/packages/ui-library/src/css/text.scss
@@ -46,7 +46,8 @@
             }
         }
 
-        &.more-on-topic {
+        &.more-on-topic,
+        &.content-link--icon-color-active {
             [class^='icon-'],
             [class*=' icon-'] {
                 color: #2996cc;
