--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -5,6 +5,7 @@
 @import 'general/image-component';
 @import 'layout/dashboard-cards';
 @import 'layout/charts';
+@import 'layout/_disabled.scss';
 @import 'layout/hero-chart';
 @import 'layout/edit-section';
 @import 'layout/policy-node';
