Add margin to default user icon

--- a/packages/end-user/src/css/shared/_user-nav.scss
+++ b/packages/end-user/src/css/shared/_user-nav.scss
@@ -50,7 +50,7 @@
     &__info {
         margin-right: $spacing-md;
 
-        .user-info__image {
+        .user-info__image, .user-info__icon {
             margin-right: $spacing-sm;
         }
 
