--- a/packages/ui-library/src/css/tutorial.scss
+++ b/packages/ui-library/src/css/tutorial.scss
@@ -1,4 +1,4 @@
-@import "details-tooltip/popper-container";
+@import 'details-tooltip/popper-container';
 
 $tutorial-dark-bg-color: darken($color-neutral-10, 20%);
 $tutorial-dark-text-color: $color-white;
@@ -7,27 +7,27 @@ $tutorial-dark-text-color: $color-white;
     &__pointer {
         z-index: 74px;
 
-        *[x-placement^="top"] & {
+        *[x-placement^='top'] & {
             @include makePointer(13px, $color-white, down);
             margin-top: -5px;
             margin-left: 5px;
         }
 
-        *[x-placement^="bottom"] & {
+        *[x-placement^='bottom'] & {
             @include makePointer(13px, $color-white, up);
             margin-bottom: -5px;
             margin-left: 5px;
         }
 
-        *[x-placement^="right"] & {
+        *[x-placement^='right'] & {
             @include makePointer(13px, $color-white, left);
             margin-right: -5px;
             margin-top: 5px;
         }
 
-        *[x-placement^="left"] & {
+        *[x-placement^='left'] & {
             @include makePointer(13px, $color-white, right);
-            margin-left: -5px;
+            margin-bottom: 5px;
             margin-left: 5px;
         }
     }
@@ -51,7 +51,6 @@ $tutorial-dark-text-color: $color-white;
         width: 400px;
         max-width: 500px;
         background: $color-white;
-        box-shadow: $popup-box-shadow;
         position: fixed;
         top: 50%;
         left: 50%;
@@ -103,7 +102,6 @@ $tutorial-dark-text-color: $color-white;
     }
 
     &__modal {
-        background-color: $color-white;
         border-radius: 4px;
         z-index: 71;
         width: 300px;
@@ -128,7 +126,7 @@ $tutorial-dark-text-color: $color-white;
             pointer-events: none;
 
             &:before {
-                content: "";
+                content: '';
                 box-shadow: 0 1px 1px 70000px rgba(0, 0, 0, 0.3);
                 position: absolute;
                 top: 0;
@@ -228,7 +226,7 @@ $tutorial-dark-text-color: $color-white;
                     padding: 1px;
 
                     &:before {
-                        content: "";
+                        content: '';
                         height: 8px;
                         width: 8px;
                         border-radius: 50%;
