--- a/packages/ui-library/src/css/inputs/_dropdown.scss
+++ b/packages/ui-library/src/css/inputs/_dropdown.scss
@@ -9,7 +9,7 @@ $option-padding: 7px $spacing-xl 7px $spacing-md;
     background: $color-white;
     padding: 8px 0;
     max-height: 200px;
-    overflow-y: scroll;
+    overflow: auto;
 }
 
 @mixin option-popover {
