UIP-3043 Added styles, documentation, and demos for Help Hint types

--- a/packages/ui-library/src/css/help.scss
+++ b/packages/ui-library/src/css/help.scss
@@ -129,7 +129,19 @@
 
     &--warning {
         .tooltip-text {
+            @include bg-styles($color-warning-yellow);
+        }
+    }
+
+    &--error {
+        .tooltip-text {
             @include bg-styles($color-critical-red);
+        }
+    }
+
+    &--success {
+        .tooltip-text {
+            @include bg-styles($color-success-green);
         }
     }
 
