UIP-3031: Set default font-family to PN [end-user]

--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -80,7 +80,7 @@ body {
 
 body,
 input {
-    font-family: sans-serif;
+    font-family: $font-default;
     -webkit-font-smoothing: antialiased;
 }
 
