UIP-3056 Made some license template CSS even more specific

--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -322,7 +322,9 @@ table.grid td.grid__cell {
             white-space: nowrap;
             width: 100%;
         }
-        .icon-edit {
+        .collapsible-link .icon-edit {
+            // this CSS block is for the licensing template
+            // if you remove it, make sure the edit icons still look good on that template
             padding-right: 25px;
             color: $color-accent-neutral-10;
             &:hover {
