UIP-2692 Raised the z index of focused rocker buttons

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -472,6 +472,12 @@ button,
         transition: $transition;
         background: $color-timberwolf;
     }
+
+    &__button {
+        &:focus {
+            z-index: 1;
+        }
+    }
 }
 
 button.button--overflow {
