UIP-3024: Fix IE SelfService issues [end-user]

--- a/packages/end-user/src/css/components/_card.scss
+++ b/packages/end-user/src/css/components/_card.scss
@@ -47,7 +47,7 @@ $card-padding-horizontal: $spacing-xl;
 
 
     &--slim {
-        min-height: unset;
+        min-height: auto;
     }
 
     &--slim > &__content{
