--- a/packages/end-user/src/css/components/_button.scss
+++ b/packages/end-user/src/css/components/_button.scss
@@ -72,7 +72,7 @@
             padding: 0;
             height: $size;
             width: $size;
-            min-height: unset;
+            min-height: auto;
             text-align: center;
             line-height: $size;
 
