--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -1,6 +1,20 @@
 $icomoon-font-path: "../fonts/icons"; // KEEP - designates relative path to icons file where this is imported
 $icomoon-font-family: "iconfont"; // KEEP - designates name of font
 
+$icon-download-box: "\e942";
+$icon-camera: "\e935";
+$icon-email: "\e936";
+$icon-ghost-disabled: "\e937";
+$icon-ghost-timed-out: "\e938";
+$icon-spinner-alt: "\e939";
+$icon-error: "\e93a";
+$icon-hour-glass: "\e93b";
+$icon-safe: "\e93c";
+$icon-success-alt: "\e93d";
+$icon-ghost-error: "\e93e";
+$icon-ghost-success: "\e93f";
+$icon-incomplete: "\e940";
+$icon-mobile: "\e941";
 $icon-account: "\61";
 $icon-admin-account: "\74";
 $icon-alert: "\21";
