--- a/packages/ui-library/src/css/ui-library.scss
+++ b/packages/ui-library/src/css/ui-library.scss
@@ -15,6 +15,7 @@
 @import 'data-sets';
 @import 'details-page';
 @import 'details-tooltip';
+@import 'expandablecard';
 @import 'help';
 @import 'html-elements';
 @import 'i18n';
