--- a/packages/ui-library/src/css/tutorial.scss
+++ b/packages/ui-library/src/css/tutorial.scss
@@ -1,35 +1,31 @@
-@import 'details-tooltip/popper-container';
-
 $tutorial-dark-bg-color: darken($color-neutral-10, 20%);
 $tutorial-dark-text-color: $color-white;
 
-.popper-container {
-    &__pointer {
-        z-index: 74px;
+.tutorial__modal--pointer {
+    z-index: 74px;
 
-        *[x-placement^='top'] & {
-            @include makePointer(13px, $color-white, down);
-            margin-top: -5px;
-            margin-left: 5px;
-        }
+    *[x-placement^='top'] & {
+        @include makePointer(13px, $color-white, down);
+        margin-top: -5px;
+        margin-left: 5px;
+    }
 
-        *[x-placement^='bottom'] & {
-            @include makePointer(13px, $color-white, up);
-            margin-bottom: -5px;
-            margin-left: 5px;
-        }
+    *[x-placement^='bottom'] & {
+        @include makePointer(13px, $color-white, up);
+        margin-bottom: -5px;
+        margin-left: 5px;
+    }
 
-        *[x-placement^='right'] & {
-            @include makePointer(13px, $color-white, left);
-            margin-right: -5px;
-            margin-top: 5px;
-        }
+    *[x-placement^='right'] & {
+        @include makePointer(13px, $color-white, left);
+        margin-right: -5px;
+        margin-top: 5px;
+    }
 
-        *[x-placement^='left'] & {
-            @include makePointer(13px, $color-white, right);
-            margin-bottom: 5px;
-            margin-left: 5px;
-        }
+    *[x-placement^='left'] & {
+        @include makePointer(13px, $color-white, right);
+        margin-bottom: 5px;
+        margin-left: 5px;
     }
 }
 
