--- a/packages/ui-library/src/css/modals.scss
+++ b/packages/ui-library/src/css/modals.scss
@@ -180,6 +180,10 @@
             margin: 0 0 15px;
         }
 
+        .body-title {
+            text-align: center;
+        }
+
         .modal-body {
             border-width: 0 1px 1px;
             text-align: left;
@@ -187,13 +191,6 @@
             max-height: calc(100% - #{$min-bottom});
 
             border-radius: $modal-radius;
-
-            &__body-title {
-                font-size: 20px;
-                margin: 0 0 $spacing-md;
-                display: flex;
-                justify-content: center;
-            }
         }
     }
     &.alert {
@@ -242,7 +239,6 @@
 
             border-radius: 0 0 $modal-radius $modal-radius;
 
-            &__body-title,
             .title,
             .body-title {
                 color: $color-warning-text;
